# elevator-control

./: .gitignore  CMakeLists.txt  README.md  settings.json  version.h
ext/: ОбменСКонтроллеромВорот.cfe
hat_repka_pi/: fp-info-cache  hat_repka_pi.kicad_prl  hat_repka_pi.kicad_pro  hat_repka_pi.kicad_sch
info/: ДиаграммаПриложения.drawio
model/: Верхняя часть_копия.m3d.stl  Подложка.m3d.stl  Шляпа.m3d.stl
src/: ElevatorControl.cpp  ElevatorControl.cpp~  ElevatorControl.h  display.cpp  display.h  elevator_control.cpp  elevator_control.h  gpio.cpp  gpio.h  input_reader.cpp  input_reader.h  json.cpp  json.h  json_builder.cpp  json_reader.cpp  json_reader.h  logo.h  main.cpp  network_client.cpp  network_client.h  transport_package.h  unit_test.cpp  unit_test.h  xserial.cpp  xserial.hpp
src/main_program/: elevator_control.cpp  elevator_control.h  json.cpp  json_builder.h
src/neon/: config.h
test/: barcode.json
